# shioncoin

./: .clang-format  CHANGES  DEPEND.txt  HOWTO_MINE.txt  Makefile.am  Makefile.in  README.md  REBUILD_CHAIN.txt  REWARD_HEIGHT.txt  SPECIFICATIONS.txt  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  libtool  release.sh  shc.conf.default
depend/share/: COPYRIGHT  DEPEND.txt  INSTALL  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  libtool  release.sh.in
depend/share/db/: Makefile.am  Makefile.in
depend/share/debian/: changelog  control  copyright  files  substvars  update.sh
depend/share/doc/: NEWS.in
depend/share/examples/: Makefile.am  Makefile.in  README.txt.in  card_login.c  shkeystore.c  shpeer.c  shproc_lock.c  shtrace.c
depend/share/include/: Makefile.am  Makefile.in
depend/share/m4/: ac-path-kernel-source.m4  gnulib-cache.m4  gnulib-comp.m4
depend/share/scripts/: make-tests.sh  mkman.sh  share-mkdep  shpkg-build.in
doc/: Makefile.am  Makefile.in  NEWS.in  doxygen.conf.in
doc/standards/: bip141.wiki  bip30.wiki  bip32.wiki  bip34.wiki  bip66.wiki  bip68.wiki  blake2s.wiki  groestl.wiki  keccak.wiki  scrypt.wiki  scypt.wiki  sha256.wiki  sip-index.wiki  sip0.wiki  sip1.wiki  sip10.wiki  sip11.wiki  sip12.wiki  sip2.wiki  sip20.wiki  sip21.wiki  sip22.wiki  sip23.wiki  sip24.wiki  sip25.wiki  sip26.wiki  sip27.wiki  sip3.wiki  sip31.wiki  sip32.wiki  sip33.wiki  sip34.wiki  sip4.wiki  sip5.wiki  sip6.wiki  sip7.wiki  sip8.wiki  skein.wiki  stratum.wiki  x11.wiki
src/coin-console/: .shcon_gui.c.swo  Makefile.am  Makefile.in  shcon.c  shcon.h  shcon_gui.c  shcon_gui.h  shcon_init.c  shcon_init.h  shcon_log.c  shcon_log.h  shcon_mine.c  shcon_mine.h  shcon_opt.c  shcon_opt.h  shcon_stream.c  shcon_stream.h  shcon_term.c  shcon_term.h  tags
src/coin-console/cdk/: Makefile.am  Makefile.in
src/coin-console/command/: command.c  command.h  command_print.c
src/coin-console/key/: key.c  key.h  key_auth.c  key_dat.c
src/coin-console/net/: net.c  net.h  net_conn.c  net_read.c  net_write.c
src/libalgo/: Makefile.am  Makefile.in  blake2.h  blake2s.c  groestl.h  hmac_sha512.cpp  hmac_sha512.h  keccak.c  keccak.h  qubit.c  qubit.h  scrypt.c  scrypt.h  sha512.cpp  sha512.h  skein.h  x11.c  x11.h
src/libcoin/: Makefile.am  Makefile.in  addrman.cpp  addrman.h  allocators.h  bech32.cpp  bech32.h  bignum.h  common.h  compat.h  netbase.cpp  netbase.h  protocol.h  serialize.h  sync.cpp  sync.h  tags  uint256.h
src/libdi3/: Makefile.am  Makefile.in  di3.h  di3_derive.c  di3_keypair.c  di3_sign.c  di3_verify.c  tags  test_di3.c
src/libdi3/pqclean_dilithium3_clean/: fips202.h  sha3_c.c  sign.c
src/libjsonspirit/: Makefile.am  Makefile.in
src/secp256k1/: Makefile.am  Makefile.in  bench_ecdh.c  bench_internal.c  bench_recover.c  bench_schnorr_verify.c  bench_sign.c  bench_verify.c  field.h  field_10x26_impl.h  field_5x52_impl.h  field_impl.h  libsecp256k1-config.h.in  num_gmp_impl.h  secp256k1.c  secp256k1_aux.c  tags
src/secp256k1/include/: secp256k1.h
src/secp256k1/test/: test_secp256k1.c
src/share-coin/: Makefile.am  Makefile.in  block_iface.cpp  clientrpc_iface.cpp  clientrpc_iface.h  proto.h  server_iface.cpp  server_iface.h  shcoind.c  shcoind.h  shcoind_block.c  shcoind_block.h  shcoind_daemon.c  shcoind_descriptor.c  shcoind_descriptor.h  shcoind_error.c  shcoind_error.h  shcoind_log.c  shcoind_log.h  shcoind_opt.c  shcoind_opt.h  shcoind_rpc.c  shcoind_rpc.h  shcoind_signal.c  shcoind_signal.h  shcoind_svc.c  shcoind_svc.h  shcoind_tool.cpp  wallet_iface.cpp
src/share-coin/blockchain/: bc.h  bc_arch.c  bc_arch.h  bc_block.c  bc_block.h  bc_fmap.c  bc_fmap.h  bc_index.c  bc_index.h  bc_mutex.c  bc_mutex.h  bc_serial.cpp  bc_table.c  bc_table.h  bc_test  bc_test.c  mk_test.sh
src/share-coin/fractal/: fractal.c  fractal.h  fractal_bmp.c  fractal_bmp.h
src/share-coin/proto/: coin_proto.c  coin_proto.h  color_proto.cpp  color_proto.h  conversion.h  emc2_proto.cpp  emc2_proto.h  ltc_proto.cpp  ltc_proto.h  network.h  out  shc_proto.cpp  shc_proto.h  test_proto.cpp  test_proto.h  testnet_proto.cpp  testnet_proto.h  types.h  usde_proto.cpp  usde_proto.h
src/share-coin/server/: account.cpp  account.h  addrman.cpp  addrman.h  allocators.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bignum.h  block.cpp  block.h  block_cmpct.cpp  block_cmpct.h  block_merkle.cpp  bloom.cpp  bloom.h  chain.cpp  chain.h  checkpoints.cpp  checkpoints.h  coin.cpp  coin.h  coinaddr.cpp  coinaddr.h  compat.h  crypter.cpp  derkey.cpp  derkey.h  global.cpp  global.h  hdkey.cpp  hdkey.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldb.cpp  (+44 more)
src/share-coin/stratum/: stratum.c  stratum.h  stratum_api.cpp  stratum_api.h  stratum_http.c  stratum_http.h  stratum_message.c  stratum_message.h  stratum_protocol.c  stratum_protocol.h  stratum_sync.c  stratum_sync.h  stratum_task.c  stratum_task.h  stratum_user.c  stratum_user.h
src/share-coin/test/: CuTest.h  test_init.cpp  test_shcoind.c  test_shcoind.h  testcoin_bignum.cpp  testcoin_block.cpp  testcoin_bloom.cpp  testcoin_coin.cpp  testcoin_hash.cpp  testcoin_json.cpp  testcoin_key.cpp
src/share-coin/tool/: tool_irc.cpp
src/share-coin/unet/: unet.c  unet.h  unet_accept.c  unet_bind.c  unet_close.c  unet_connect.c  unet_event.c  unet_io.c  unet_local.c  unet_peer.c  unet_peerdb.c  unet_seed.h  unet_thread.c  unet_timer.c
src/shioncoin/: Makefile.am  Makefile.in  block_iface.cpp  clientrpc_iface.cpp  proto.h  server_iface.cpp  server_iface.h  shcoind.c  shcoind.h  shcoind_block.c  shcoind_block.h  shcoind_daemon.c  shcoind_daemon.h  shcoind_descriptor.c  shcoind_descriptor.h  shcoind_error.c  shcoind_error.h  shcoind_log.c  shcoind_log.h  shcoind_opt.c  shcoind_opt.h  shcoind_rpc.c  shcoind_rpc.h  shcoind_signal.c  shcoind_signal.h  shcoind_svc.c  shcoind_svc.h  shcoind_tool.cpp  shcoind_version.h  tags  wallet_iface.cpp
src/shioncoin/blockchain/: bc.h  bc_arch.c  bc_arch.h  bc_block.c  bc_block.h  bc_fmap.c  bc_fmap.h  bc_index.c  bc_index.h  tags  (+4 more)
(+1651 files in other folders)
